@@ -14,15 +14,11 @@
 package jp.root42.indolently;
 
 import java.util.Iterator;
-import java.util.NoSuchElementException;
 import java.util.function.BooleanSupplier;
 import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
 
-import jp.root42.indolently.ref.$long;
-
-import static jp.root42.indolently.Expressive.*;
 import static jp.root42.indolently.Indolently.*;
 
 
@@ -40,9 +36,7 @@ public class Iterative {
      * @param from the value start from (inclusive).
      * @return infinite integer sequence.
      */
-    public static $iter<Integer> sequence(final int from) {
-        return sequence(from, 1);
-    }
+    public static $iter<Integer> sequence(final int from) { return sequence(from, 1); }
 
     /**
      * Generate infinite integer sequence.
@@ -51,9 +45,7 @@ public class Iterative {
      * @param step count stepping
      * @return infinite integer sequence.
      */
-    public static $iter<Integer> sequence(final int from, final int step) {
-        return range(from, Integer.MAX_VALUE, step);
-    }
+    public static $iter<Integer> sequence(final int from, final int step) { return range(from, Integer.MAX_VALUE, step); }
 
     /**
      * Generate infinite long sequence.
@@ -61,9 +53,7 @@ public class Iterative {
      * @param from the value start from (inclusive).
      * @return infinite integer sequence.
      */
-    public static $iter<Long> sequence(final long from) {
-        return sequence(from, 1);
-    }
+    public static $iter<Long> sequence(final long from) { return sequence(from, 1); }
 
     /**
      * Generate infinite long sequence.
@@ -72,9 +62,7 @@ public class Iterative {
      * @param step count stepping
      * @return infinite integer sequence.
      */
-    public static $iter<Long> sequence(final long from, final int step) {
-        return range(from, Long.MAX_VALUE, step);
-    }
+    public static $iter<Long> sequence(final long from, final int step) { return range(from, Long.MAX_VALUE, step); }
 
     // @formatter:off
     /**
@@ -103,9 +91,7 @@ public class Iterative {
      * @see <a href="http://en.wikipedia.org/wiki/Generator_(computer_programming)">Generator_(computer_programming)</a>
      */
     // @formatter:on
-    public static <T> Generator<T> generator(final Supplier<? extends T> f) {
-        return Generator.of(null, x -> f.get());
-    }
+    public static <T> Generator<T> generator(final Supplier<? extends T> f) { return Generator.of(null, x -> f.get()); }
 
     // @formatter:off
     /**
@@ -146,9 +132,7 @@ public class Iterative {
      * @see <a href="http://en.wikipedia.org/wiki/Generator_(computer_programming)">Generator_(computer_programming)</a>
      */
     // @formatter:on
-    public static <E, T> Generator<T> generator(final E env, final Function<? super E, ? extends T> f) {
-        return Generator.of(env, f);
-    }
+    public static <E, T> Generator<T> generator(final E env, final Function<? super E, ? extends T> f) { return Generator.of(env, f); }
 
     /**
      * shortcut notation of iterator.
@@ -161,9 +145,7 @@ public class Iterative {
     @SuppressWarnings({ "varargs", "RedundantSuppression" })
     @SafeVarargs
     public static <T> $iter<T> iterator(final Supplier<? extends T>... values) {
-
-        final Iterator<Supplier<? extends T>> i = list(values).iterator();
-
+        final var i = list(values).iterator();
         return iterator(i::hasNext, () -> i.next().get());
     }
 
@@ -177,7 +159,6 @@ public class Iterative {
      * @return iterator as {@link $iter}
      */
     public static <T> $iter<T> iterator(final BooleanSupplier hasNext, final Supplier<? extends T> next) {
-
         return iterator(null, x -> hasNext.getAsBoolean(), x -> next.get());
     }
 
@@ -193,7 +174,6 @@ public class Iterative {
      * @return iterator as {@link $iter}
      */
     public static <E, T> $iter<T> iterator(final E env, final Predicate<? super E> hasNext, final Function<? super E, ? extends T> next) {
-
         return $iter.of(env, hasNext, next);
     }
 
@@ -214,9 +194,7 @@ public class Iterative {
      * @param to the value end to (inclusive).
      * @return integer iterator.
      */
-    public static $iter<Integer> range(final int from, final int to) {
-        return range(from, to, 1);
-    }
+    public static $iter<Integer> range(final int from, final int to) { return range(from, to, 1); }
 
     /**
      * Generate integer iterator.
@@ -234,10 +212,7 @@ public class Iterative {
      * @param step count stepping
      * @return integer iterator.
      */
-    public static $iter<Integer> range(final int from, final int to, final int step) {
-        //noinspection
-        return range((long) from, to, step).map(x -> x.intValue());
-    }
+    public static $iter<Integer> range(final int from, final int to, final int step) { return range((long) from, to, step).map(Long::intValue); }
 
     /**
      * Generate long iterator.
@@ -256,9 +231,7 @@ public class Iterative {
      * @param to the value end to (inclusive).
      * @return integer iterator.
      */
-    public static $iter<Long> range(final long from, final long to) {
-        return range(from, to, 1);
-    }
+    public static $iter<Long> range(final long from, final long to) { return range(from, to, 1); }
 
     /**
      * Generate long iterator.
@@ -277,18 +250,18 @@ public class Iterative {
      * @return integer iterator.
      */
     public static $iter<Long> range(final long from, final long to, final int step) {
-        if (step <= 0) {
-            throw new IllegalArgumentException(String.format("(step = %d) <= 0", step));
-        }
+        if (step <= 0) throw new IllegalArgumentException("(step = %d) <= 0".formatted(step));
 
-        final Predicate<$long> pred = //
-            env -> when(from < to).then(() -> env.$ <= to) //
-                .when(to < from).then(() -> to <= env.$) //
-                .none(() -> env.$ == from);
-
-        return iterator(ref(from), pred, env -> match(env) //
-            .when(pred).then(x -> x.getThen(y -> y.$ += (from <= to ? step : -step))) //
-            .raise(x -> new NoSuchElementException()));
+        return iterator(ref(from), env -> {
+            final var cur = env.$;
+            return from < to ? cur <= to //
+                : to < from ? to <= cur //
+                    : cur == from;
+        }, env -> {
+            final var next = env.$;
+            env.$ += (from <= to ? step : -step);
+            return next;
+        });
     }
 
     public static class ResourceIterable<T extends AutoCloseable>
@@ -304,9 +277,9 @@ public class Iterative {
         public void close() throws Exception {
             Exception last = null;
             for (final var r: this.list.pushAll(list(this.iter)))
-                try {
-                    r.close();
-                } catch (final Exception e) {
+                try { r.close(); } //
+                catch (final Exception e) {
+                    //noinspection CallToPrintStackTrace
                     (last = e).printStackTrace();
                 }
 
